# tts

./: .gitignore  CLAUDE.md  README.MD  Recovery_Residence_Investor_Deck_Polished.pptx  pyproject.toml
src/pptx_tts/: __init__.py  detector.py  extractor.py  main.py  playback.py  synthesizer.py
tests/: test_detector.py  test_extractor.py  test_playback.py
